# ffreis-rust-onnx-model-serving

./: .gitignore  .trivyignore.yaml  CHANGELOG.md  Makefile  README.md  codecov.yml  lefthook.yml  renovate.json
.github/: dependabot.yml
.github/workflows/: api-grpc-smoke.yml  build-all.yml  code-quality.yml  code-review.yml  code-security.yml  codeql.yml  commit-checks.yml  coverage.yml  docker-build.yml  grpc-sync.yml  grype.yml  property-parity.yml  release-please.yml  semgrep.yml  snyk.yml  trivy.yml
app/: Cargo.toml  Makefile  audit.toml  build.rs
app/proto/onnx_serving_grpc/: inference.proto
app/src/: config.rs  lib.rs  main.rs  telemetry.rs
app/tests/: e2e_tests.rs  integration_tests.rs
app/tests/fixtures/: model.onnx
container/: Dockerfile.base-builder  Dockerfile.base-runner  Dockerfile.builder  Dockerfile.runner  Dockerfile.services
docs/: openapi.yaml
examples/: docker-compose.api-grpc.yml  smoke_api_grpc.py
scripts/: check_coverage.py  check_coverage_per_file.py  check_e2e_tests.py  check_openapi.py  check_openapi_drift.py
