[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.8.8"
http = "1.3.1"
prost = "0.13.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.12.3", features = ["transport"] }
tract-onnx = "0.21.13"
uuid = { version = "=1.21.0", features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.12.3"

[dev-dependencies]
proptest = "1.6.0"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "=3.23.0"
