[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
http = "1.3"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tract-onnx = "0.22"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14"

[dev-dependencies]
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3"
